<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_nowplaying"
            android:icon="@drawable/ic_local_movies_black_24dp"
            android:title="@string/now_playing" />
        <item
            android:id="@+id/nav_upcoming"
            android:icon="@drawable/ic_movie_filter_black_24dp"
            android:title="@string/up_coming" />
        <item
            android:id="@+id/favorite"
            android:icon="@drawable/ic_favorite_border_black_24dp"
            android:title="@string/favorite" />

        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/search" />

        <item android:id="@+id/action_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/setting"
            />


    </group>


</menu>
