<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/now_playing"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/more_nowPlaying"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_marginRight="3dp"
                android:text="@string/view_all"
                android:textColor="#93a98e"
                android:textSize="15sp"
                android:textStyle="bold" />
        </FrameLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/cardHome_nowPlaying"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp" />


        <LinearLayout
            android:id="@+id/placeHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:visibility="gone">

            <include layout="@layout/place_holder" />

        </LinearLayout>
        <FrameLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/up_coming"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/more_UpComing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_marginRight="3dp"
                android:text="@string/view_all"
                android:textColor="#93a98e"
                android:textSize="15sp"
                android:textStyle="bold" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/placeHolderUpComing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:visibility="gone">

            <include layout="@layout/place_holder_upcoming" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:visibility="gone"
            android:id="@+id/cardHome_upComing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

    </LinearLayout>
</ScrollView>